--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@ footer{
     <button class="btn-buy" onclick="openPayModal()">
       🛒 Buy Kit Now
     </button>
-    <a class="btn-wa" href="https://wa.me/918303907045?text=Hi%21%20I%20want%20to%20order%20the%20Hygenia%20Care%20Kit%20%F0%9F%92%96%20Please%20share%20payment%20details." target="_blank">
+    <a class="btn-wa" href="https://wa.me/918303907045?text=Hi%21%20I%20want%20to%20order%20the%20Hygenia%20Care%20Kit%20%F0%9F%92%96%20." target="_blank">
       <span class="btn-wa-icon">💬</span>
       Send Screenshot on WhatsApp
     </a>
@@ -681,7 +681,7 @@ footer{
   <div class="footer-copy">© 2025 Hygenia Care. Made with 💖 for every woman.</div>
 </footer>
 
-<!-- PAYMENT MODAL -->
+<!--  MODAL -->
 <div class="modal-overlay" id="payModal">
   <div class="modal">
     <button class="modal-close" onclick="closePayModal()">✕</button>
